# flicker

./: .gitignore  CMakeLists.txt
Flicker/: CMakeLists.txt  main.cpp  pch.hpp
Flicker/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Input.cpp  Input.hpp
Flicker/Assets/: Assets.cpp  Assets.hpp  CMakeLists.txt
Flicker/Data/: CMakeLists.txt  Components.hpp  Containers.hpp  Data.hpp
Flicker/Effects/: CMakeLists.txt  Skybox.cpp  Skybox.hpp
Flicker/Light/: CMakeLists.txt  Light.hpp  LightUniformData.hpp  LightingData.cpp  LightingData.hpp  PointLight.hpp
Flicker/Material/: CMakeLists.txt  LitMaterial.cpp  LitMaterial.hpp  Material.cpp  Material.hpp  SkyboxMaterial.cpp  SkyboxMaterial.hpp
Flicker/Models/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  model_import.cpp  model_import.hpp
Flicker/OOP/Application/: Application.hpp
Flicker/OOP/Effects/: Skybox.cpp
Flicker/OOP/Light/: DirectionalLight.hpp  LightingData.hpp
Flicker/OOP/Material/: SkyboxMaterial.cpp
Flicker/OOP/Models/: Mesh.hpp
Flicker/OOP/Renderer/: Renderer.hpp
Flicker/OOP/Scene/: Camera.hpp
Flicker/OOP/Texture/: Cubemap.cpp  Cubemap.hpp  TextureBase.cpp  TextureBase.hpp
Flicker/OOP/tests/: tests.hpp
Flicker/Renderer/: ForwardRenderer.cpp  ForwardRenderer.hpp  Renderer.cpp  Renderer.hpp
Flicker/Scene/: CMakeLists.txt  Camera.cpp  Camera.hpp  Node.cpp  Node.hpp  Scene.cpp  Scene.hpp
Flicker/Shader/: CMakeLists.txt  Shader.cpp  Shader.hpp
Flicker/Texture/: CMakeLists.txt  Cubemap.cpp  Cubemap.hpp  Texture.cpp  Texture.hpp
Flicker/Transform/: CMakeLists.txt  Camera.cpp  Camera.hpp  Transform.cpp  Transform.hpp
Flicker/Utils/: utils.hpp
Flicker/tests/: transform_tests.hpp
OOP/Light/: Light.hpp
OOP/Models/: model_import.cpp
OOP/Renderer/: CMakeLists.txt
assets/shaders/: lit.fs  lit.vs  skybox.fs  skybox.vs
include/assimp/Compiler/: poppack1.h
include/glad/: glad.h
src/: CMakeLists.txt  glad.c  main.cpp  pch.hpp
src/Application/: Application.cpp  Application.hpp
src/Assets/: Assets.cpp  Assets.hpp  AssetsStorage.cpp  AssetsStorage.hpp  CMakeLists.txt  assimp_parse.cpp  assimp_parse.hpp
src/Data/: CMakeLists.txt  Components.hpp  Containers.cpp  Containers.hpp  Data.hpp
src/ECS/: CMakeLists.txt  ECS_impl.hpp  MeshRenderingSystem.cpp  MeshRenderingSystem.hpp  TranformationSystem.hpp  TransformationSystem.cpp
src/MPL/: mpl.hpp
src/Material/: LitMaterial.hpp  Material.cpp
src/Models/: model_import.cpp
src/OpenGL/: CMakeLists.txt  OpenGl.cpp  OpenGl.hpp
src/Renderer/: CMakeLists.txt  ForwardRenderer.cpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  Renderer.cpp
src/Scene/: Node.hpp
src/Texture/: CMakeLists.txt  Texture.cpp
src/Utils/: CMakeLists.txt  utils.hpp
src_oop/Application/: Application.cpp  CMakeLists.txt
src_oop/Light/: CMakeLists.txt  PointLight.hpp
src_oop/Models/: Mesh.cpp  Model.cpp  model_import.hpp
src_oop/Scene/: CMakeLists.txt
src_oop/Shader/: Shader.cpp
src_oop/tests/: CMakeLists.txt
